--- a/repsly_challenge/repsly_challenge.ipynb
+++ b/repsly_challenge/repsly_challenge.ipynb
@@ -10,6 +10,26 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from repsly_data import RepslyData\n",
+    "\n",
+    "repsly_data = RepslyData()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Fully connected stuff"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -21,11 +41,10 @@
     }
    ],
    "source": [
-    "from repsly_data import RepslyData\n",
+    "mode = 'FC'\n",
     "\n",
-    "repsly_data = RepslyData()\n",
     "print('Reading data (this might take a minute or so)...', end='')\n",
-    "repsly_data.read_data_for_plain_nn('data/trial_users_analysis.csv')\n",
+    "repsly_data.read_data('data/trial_users_analysis.csv', mode)\n",
     "print('done.')"
    ]
   },
@@ -38,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -78,13 +97,13 @@
     }
    ],
    "source": [
-    "read_batch = repsly_data.read_batch_for_plain_nn(batch_size=16)\n",
+    "read_batch = repsly_data.read_batch(batch_size=16)\n",
     "\n",
     "X, y = next(read_batch)\n",
     "print('X{}: {}'.format(list(X.shape), X))\n",
     "print('X[0]: {}'.format(X[0]))\n",
     "\n",
-    "print('y:', y)\n"
+    "print('y:', y)"
    ]
   },
   {
@@ -92,6 +111,139 @@
    "metadata": {},
    "source": [
     "As you can see above, each input vector `X` has `1+15*16=241` values, most of which are zeros. The first one is the trial start date as offset from 2016-01-01 and the rest is different usage parameters for the following 16 days. Data provided by batch read is randomly shuffled. Output values are stored in `y` and they represent if the user purchased the Repsly service after the trial or not."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "## 2D data suitable for convolution"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Reading data (this might take a minute or so)...done.\n"
+     ]
+    }
+   ],
+   "source": [
+    "mode = 'CONV'\n",
+    "\n",
+    "print('Reading data (this might take a minute or so)...', end='')\n",
+    "repsly_data.read_data('data/trial_users_analysis.csv', mode)\n",
+    "print('done.')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "X[10, 16, 16]: [[[ 153.    1.    1. ...,    0.    0.    7.]\n",
+      "  [ 153.    0.    0. ...,    0.    0.    0.]\n",
+      "  [ 153.    0.    0. ...,    0.    0.    0.]\n",
+      "  ..., \n",
+      "  [ 153.    0.    0. ...,    0.    0.    0.]\n",
+      "  [ 153.    0.    0. ...,    0.    0.    0.]\n",
+      "  [ 153.    0.    0. ...,    0.    0.    0.]]\n",
+      "\n",
+      " [[ 224.    0.    0. ...,    0.    0.    0.]\n",
+      "  [ 224.    0.    0. ...,    0.    0.    0.]\n",
+      "  [ 224.    0.    0. ...,    0.    0.    0.]\n",
+      "  ..., \n",
+      "  [ 224.    0.    0. ...,    0.    0.    0.]\n",
+      "  [ 224.    0.    0. ...,    0.    0.    0.]\n",
+      "  [ 224.    0.    0. ...,    0.    0.    0.]]\n",
+      "\n",
+      " [[  54.    0.    0. ...,    0.    0.    0.]\n",
+      "  [  54.    0.    0. ...,    0.    0.    0.]\n",
+      "  [  54.    0.    0. ...,    0.    0.    0.]\n",
+      "  ..., \n",
+      "  [  54.    0.    0. ...,    0.    0.    0.]\n",
+      "  [  54.    0.    0. ...,    0.    0.    0.]\n",
+      "  [  54.    0.    0. ...,    0.    0.    0.]]\n",
+      "\n",
+      " ..., \n",
+      " [[ 319.    1.   24. ...,    0.    0.    0.]\n",
+      "  [ 319.    1.   21. ...,    0.    0.    0.]\n",
+      "  [ 319.    1.    3. ...,    0.    0.    0.]\n",
+      "  ..., \n",
+      "  [ 319.    1.    7. ...,    0.    0.    0.]\n",
+      "  [ 319.    1.    4. ...,    0.    0.    0.]\n",
+      "  [ 319.    1.    5. ...,    0.    0.    0.]]\n",
+      "\n",
+      " [[ 179.    2.    1. ...,    0.    0.    0.]\n",
+      "  [ 179.    0.    0. ...,    0.    0.    0.]\n",
+      "  [ 179.    0.    0. ...,    0.    0.    0.]\n",
+      "  ..., \n",
+      "  [ 179.    1.    2. ...,    2.    2.    0.]\n",
+      "  [ 179.    1.    4. ...,    2.    2.    0.]\n",
+      "  [ 179.    0.    0. ...,    0.    0.    0.]]\n",
+      "\n",
+      " [[ 146.    0.    0. ...,    0.    0.    0.]\n",
+      "  [ 146.    0.    0. ...,    0.    0.    0.]\n",
+      "  [ 146.    0.    0. ...,    0.    0.    0.]\n",
+      "  ..., \n",
+      "  [ 146.    0.    0. ...,    0.    0.    0.]\n",
+      "  [ 146.    0.    0. ...,    0.    0.    0.]\n",
+      "  [ 146.    0.    0. ...,    0.    0.    0.]]]\n",
+      "X[0]: [[ 153.    1.    1.    0.    0.    0.    0.    0.    0.    0.    0.    0.\n",
+      "     0.    0.    0.    7.]\n",
+      " [ 153.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.\n",
+      "     0.    0.    0.    0.]\n",
+      " [ 153.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.\n",
+      "     0.    0.    0.    0.]\n",
+      " [ 153.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.\n",
+      "     0.    0.    0.    0.]\n",
+      " [ 153.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.\n",
+      "     0.    0.    0.    0.]\n",
+      " [ 153.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.\n",
+      "     0.    0.    0.    0.]\n",
+      " [ 153.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.\n",
+      "     0.    0.    0.    0.]\n",
+      " [ 153.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.\n",
+      "     0.    0.    0.    0.]\n",
+      " [ 153.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.\n",
+      "     0.    0.    0.    0.]\n",
+      " [ 153.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.\n",
+      "     0.    0.    0.    0.]\n",
+      " [ 153.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.\n",
+      "     0.    0.    0.    0.]\n",
+      " [ 153.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.\n",
+      "     0.    0.    0.    0.]\n",
+      " [ 153.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.\n",
+      "     0.    0.    0.    0.]\n",
+      " [ 153.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.\n",
+      "     0.    0.    0.    0.]\n",
+      " [ 153.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.\n",
+      "     0.    0.    0.    0.]\n",
+      " [ 153.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.\n",
+      "     0.    0.    0.    0.]]\n",
+      "y: [0 0 0 0 0 0 0 1 1 0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "read_batch = repsly_data.read_batch(batch_size=10)\n",
+    "\n",
+    "X, y = next(read_batch)\n",
+    "print('X{}: {}'.format(list(X.shape), X))\n",
+    "print('X[0]: {}'.format(X[0]))\n",
+    "\n",
+    "print('y:', y)"
    ]
   },
   {
