--- a/repsly_challenge/repsly_challenge.ipynb
+++ b/repsly_challenge/repsly_challenge.ipynb
@@ -9,23 +9,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Reading data (this might take a minute or so)...done.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from repsly_data import RepslyData\n",
     "\n",
     "repsly_data = RepslyData()\n",
     "print('Reading data (this might take a minute or so)...', end='')\n",
-    "repsly_data.read_data_for_plain_nn('data/trial_users_analysis.csv')\n",
+    "repsly_data.read_data('data/trial_users_analysis.csv', mode='FC')\n",
     "print('done.')"
    ]
   },
@@ -38,53 +30,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "X[16, 241]: [[ 153.    1.    1. ...,    0.    0.    0.]\n",
-      " [ 224.    0.    0. ...,    0.    0.    0.]\n",
-      " [  54.    0.    0. ...,    0.    0.    0.]\n",
-      " ..., \n",
-      " [ 448.    0.    0. ...,    0.    0.    0.]\n",
-      " [  52.    0.    0. ...,    0.    0.    0.]\n",
-      " [ 194.    0.    0. ...,    0.    0.    0.]]\n",
-      "X[0]: [ 153.    1.    1.    0.    0.    0.    0.    0.    0.    0.    0.    0.\n",
-      "    0.    0.    0.    7.    0.    0.    0.    0.    0.    0.    0.    0.\n",
-      "    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.\n",
-      "    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.\n",
-      "    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.\n",
-      "    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.\n",
-      "    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.\n",
-      "    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.\n",
-      "    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.\n",
-      "    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.\n",
-      "    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.\n",
-      "    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.\n",
-      "    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.\n",
-      "    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.\n",
-      "    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.\n",
-      "    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.\n",
-      "    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.\n",
-      "    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.\n",
-      "    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.\n",
-      "    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.\n",
-      "    0.]\n",
-      "y: [0 0 0 0 0 0 0 1 1 0 0 0 0 0 0 0]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "read_batch = repsly_data.read_batch_for_plain_nn(batch_size=16)\n",
+    "read_batch = repsly_data.read_batch(batch_size=20)\n",
     "\n",
     "X, y = next(read_batch)\n",
     "print('X{}: {}'.format(list(X.shape), X))\n",
-    "print('X[0]: {}'.format(X[0]))\n",
+    "print('y:', y)\n",
     "\n",
-    "print('y:', y)\n"
+    "print('X[7]: {}'.format(X[7]))\n",
+    "print('X[8]: {}'.format(X[8]))\n",
+    "print('X[19]: {}'.format(X[19]))\n",
+    "\n",
+    "print('y[7, 8, 19]: {}'.format(y[[7, 8, 19]]))"
    ]
   },
   {
