stats added and returned from train()

--- a/repsly_challenge/repsly_challenge.ipynb
+++ b/repsly_challenge/repsly_challenge.ipynb
@@ -11,17 +11,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Reading data (this might take a minute or so)...done.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from repsly_data import RepslyData\n",
     "\n",
@@ -41,24 +33,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "X[20, 241]: [[ 153.    1.    1. ...,    0.    0.    0.]\n",
-      " [ 224.    0.    0. ...,    0.    0.    0.]\n",
-      " [  54.    0.    0. ...,    0.    0.    0.]\n",
-      " ..., \n",
-      " [ 185.    0.    0. ...,    0.    0.    0.]\n",
-      " [  55.    0.    0. ...,    0.    0.    0.]\n",
-      " [ 131.    0.    0. ...,    1.    5.    0.]]\n",
-      "y: [0 0 0 0 0 0 0 1 1 0 0 0 0 0 0 0 0 0 0 0]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "read_batch = repsly_data.read_batch(batch_size=20)\n",
     "\n",
@@ -120,18 +97,30 @@
     "decay_steps=10\n",
     "decay_rate=0.99\n",
     "\n",
-    "batch_size = 128\n",
+    "batch_size = 1024\n",
     "epochs_loops = 1\n",
-    "epochs_at_once = 20\n",
+    "epochs_at_once = 40\n",
     "skip_steps=10\n",
     "\n",
+    "stats = {}\n",
     "for keep_prob in keep_probs:\n",
+    "    hyperparams = keep_prob\n",
     "    arch_dict = {'keep_prob': keep_prob}\n",
     "    \n",
     "    repsly_nn.create_net(arch, arch_dict, learning_rate, decay_steps, decay_rate)\n",
     "    for i in range(epochs_loops):\n",
     "        print('Training for {} epochs...'.format(epochs_at_once))\n",
-    "        repsly_nn.train(data=repsly_data, batch_size=batch_size, epochs=epochs_at_once, skip_steps=skip_steps)"
+    "        stats[hyperparams] = repsly_nn.train(data=repsly_data, batch_size=batch_size, epochs=epochs_at_once, skip_steps=skip_steps)\n",
+    "        print(stats[hyperparams])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print({key: stats[key]['f1_score'] for key in stats.keys()})"
    ]
   },
   {
